backend/openshift-manifests/50-managed-cluster-rbac.yaml
---
# This manifest should be applied to each managed cluster that will receive
# upgrade CronJobs from ACM. These resources are needed for the CronJob
# to execute OpenShift upgrades.
#
# Apply to managed clusters before scheduling upgrades:
#   oc apply -f 50-managed-cluster-rbac.yaml -n openshift-upgrade
#
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-upgrade
  labels:
    app.kubernetes.io/name: openshift-upgrade
    purpose: cluster-upgrade-scheduler
